--- a/music_app_exam_prep/templates/common/base.html
+++ b/music_app_exam_prep/templates/common/base.html
@@ -1,4 +1,6 @@
+{% load get_user %}
 {% load static %}
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,11 +18,14 @@
             <img src="{% static 'images/headphones.png' %}" alt="headphones"/>
             <a href="{% url 'home' %}">Home</a>
             <ul></ul>
-            <ul>
-                <!--Only for user with created profile-->
-                <li><a href="{% url 'add_album' %}">Create Album</a></li>
-                <li><a href="{% url 'profile_details' %}">Profile</a></li>
-            </ul>
+            {% get_user as profile %}
+            {% if profile %}
+                <ul>
+                    <!--Only for user with created profile-->
+                    <li><a href="{% url 'add_album' %}">Create Album</a></li>
+                    <li><a href="{% url 'profile_details' %}">Profile</a></li>
+                </ul>
+            {% endif %}
         </nav>
     </header>
     <!-- End Navigation Bar -->
