--- a/music_app_exam_prep/templates/common/home-no-profile.html
+++ b/music_app_exam_prep/templates/common/home-no-profile.html
@@ -1,8 +1,10 @@
 {% extends 'common/base.html' %}
+{% load static %}
+
+
 
 {% block content %}
-    <!-- Main Content -->
-    <!--Home Page-->
+    
     <div class="container-inline">
         <section id="welcomePage">
             <div id="welcome-message">
@@ -10,36 +12,15 @@
                 <h1>My Music App!</h1>
             </div>
             <div class="music-img">
-                <img src="/images/musicIcons.webp" alt="music-icon"/>
+                <img src="{% static 'images/musicIcons.webp' %}" alt="music-icon"/>
             </div>
         </section>
-
-        <!-- Registration -->
         <section id="registerPage">
-            <form>
+            <form method="POST">
                 <fieldset>
                     <legend>Profile</legend>
-                    <!-- Form for Registration -->
-                    <label for="username">Username:</label>
-                    <input
-                            id="username"
-                            name="username"
-                            type="text"
-                            placeholder="Username"
-                    />
-
-                    <label for="email">Email:</label>
-                    <input id="email" name="email" type="email" placeholder="Email"/>
-
-                    <label for="age">Age:</label>
-                    <input
-                            id="age"
-                            name="age"
-                            type="number"
-                            min="0"
-                            placeholder="Age"
-                    />
-                    <!-- Button to Create Profile -->
+                    {{ form.as_p }}
+                    {% csrf_token %}
                     <button type="submit" class="register">Enter</button>
                 </fieldset>
             </form>
