--- a/Artonia_v2/templates/workshops/workshop_detail.html
+++ b/Artonia_v2/templates/workshops/workshop_detail.html
@@ -19,7 +19,9 @@
                 <li><strong>Price:</strong> ${{ workshop.price }}</li>
                 <li><strong>Capacity:</strong> {{ workshop.capacity }} spots</li>
             </ul>
-            <button class="view-current-button">Register Now</button>
+            <a class="view-button" href="{% url 'workshop-delete' workshop.pk %}">Delete Workshop</a>
+
+            {#            <button class="view-current-button">Register Now1</button>#}
         </div>
     </div>
 {% endblock %}
