--- a/Artonia_v2/templates/workshops/workshop_detail.html
+++ b/Artonia_v2/templates/workshops/workshop_detail.html
@@ -20,6 +20,7 @@
                 <li><strong>Capacity:</strong> {{ workshop.capacity }} spots</li>
             </ul>
             <a class="view-button" href="{% url 'workshop-delete' workshop.pk %}">Delete Workshop</a>
+            <a class="view-button" href="{% url 'workshop-edit' workshop.pk %}">Edit Workshop</a>
 
             {#            <button class="view-current-button">Register Now1</button>#}
         </div>
